--- a/MyWebsite/requirements.txt
+++ b/MyWebsite/requirements.txt
@@ -3,6 +3,7 @@ Flask==0.10.1
 Flask-Migrate==1.8.0
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.1
+Flask-WTF==0.12
 itsdangerous==0.24
 Jinja2==2.8
 Mako==1.0.4
@@ -11,3 +12,4 @@ psycopg2==2.6.1
 python-editor==1.0
 SQLAlchemy==1.0.12
 Werkzeug==0.11.9
+WTForms==2.1
