--- a/MyWebsite/requirements.txt
+++ b/MyWebsite/requirements.txt
@@ -1,15 +1,22 @@
 alembic==0.8.6
+astroid==1.4.6
+colorama==0.3.7
 Flask==0.10.1
+Flask-Login==0.3.2
 Flask-Migrate==1.8.0
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.1
 Flask-WTF==0.12
 itsdangerous==0.24
 Jinja2==2.8
+lazy-object-proxy==1.2.2
 Mako==1.0.4
 MarkupSafe==0.23
 psycopg2==2.6.1
+pylint==1.5.6
 python-editor==1.0
+six==1.10.0
 SQLAlchemy==1.0.12
 Werkzeug==0.11.9
+wrapt==1.10.8
 WTForms==2.1
