--- a/MyWebsite/requirements.txt
+++ b/MyWebsite/requirements.txt
@@ -1,8 +1,10 @@
 alembic==0.8.6
 astroid==1.4.6
+blinker==1.4
 colorama==0.3.7
 Flask==0.10.1
 Flask-Login==0.3.2
+Flask-Mail==0.9.1
 Flask-Migrate==1.8.0
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.1
