Update webconfig to referent alertweb project.

--- a/AlertWeb/web.config
+++ b/AlertWeb/web.config
@@ -13,8 +13,8 @@
     </trace>
   </system.diagnostics>
   <appSettings>
-    <add key="WSGI_ALT_VIRTUALENV_HANDLER" value="MyWebsite.app" />
-    <add key="WSGI_ALT_VIRTUALENV_ACTIVATE_THIS" value="%ROOTDIR%\MyWebEnv\Scripts\python.exe" />
+    <add key="WSGI_ALT_VIRTUALENV_HANDLER" value="AlertWeb.app" />
+    <add key="WSGI_ALT_VIRTUALENV_ACTIVATE_THIS" value="%ROOTDIR%\AlertWebEnv\Scripts\python.exe" />
     <add key="WSGI_HANDLER" value="ptvs_virtualenv_proxy.get_venv_handler()" />
     <add key="PYTHONPATH" value="%ROOTDIR%" />
   </appSettings>
@@ -30,7 +30,7 @@
       <rules>
         <rule name="Static Files" stopProcessing="true">
           <match url="^/static/.*" ignoreCase="true" />
-          <action type="Rewrite" url="^/MyWebsite/static/.*" appendQueryString="true" />
+          <action type="Rewrite" url="^/AlertWeb/static/.*" appendQueryString="true" />
         </rule>
         <rule name="Configure Python" stopProcessing="true">
           <match url="(.*)" ignoreCase="false" />
