--- a/AlertWeb/requirements.txt
+++ b/AlertWeb/requirements.txt
@@ -1,4 +1,4 @@
-alembic==0.8.6
+alembic==0.8.7
 astroid==1.4.6
 blinker==1.4
 colorama==0.3.7
@@ -9,6 +9,7 @@ Flask-Migrate==1.8.0
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.1
 Flask-WTF==0.12
+gunicorn==19.6.0
 itsdangerous==0.24
 Jinja2==2.8
 lazy-object-proxy==1.2.2
@@ -16,9 +17,9 @@ Mako==1.0.4
 MarkupSafe==0.23
 psycopg2==2.6.1
 pylint==1.5.6
-python-editor==1.0
+python-editor==1.0.1
 six==1.10.0
-SQLAlchemy==1.0.12
+SQLAlchemy==1.0.14
 Werkzeug==0.11.9
 wrapt==1.10.8
 WTForms==2.1
