--- a/AlertWeb/requirements.txt
+++ b/AlertWeb/requirements.txt
@@ -1,25 +1,28 @@
-alembic==0.8.7
-astroid==1.4.6
+alembic==0.8.8
+astroid==1.4.8
 blinker==1.4
+click==6.6
 colorama==0.3.7
-Flask==0.10.1
+Flask==0.11.1
 Flask-Login==0.3.2
 Flask-Mail==0.9.1
-Flask-Migrate==1.8.0
+Flask-Migrate==2.0.0
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.1
 Flask-WTF==0.12
 gunicorn==19.6.0
+isort==4.2.5
 itsdangerous==0.24
 Jinja2==2.8
 lazy-object-proxy==1.2.2
 Mako==1.0.4
 MarkupSafe==0.23
-psycopg2==2.6.1
-pylint==1.5.6
+mccabe==0.5.2
+psycopg2==2.6.2
+pylint==1.6.4
 python-editor==1.0.1
 six==1.10.0
-SQLAlchemy==1.0.14
-Werkzeug==0.11.9
+SQLAlchemy==1.0.15
+Werkzeug==0.11.11
 wrapt==1.10.8
 WTForms==2.1
